# spotify_mcp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: auth.py  main.py  resources.py  server.py  sp_mcp.py  tools.py  utils.py
src/resources/: get_uri.py
src/tools/: play.py
